# hicopy

./: .gitignore  README.md  example.py  pyproject.toml
hicopy/: __init__.py
test/: test_hicopy.py
